fixes footer spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 90%;
+    padding: 0 2rem;
 }
 
 footer p {
